--- a/test.ipynb
+++ b/test.ipynb
@@ -1,94 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'status': 'OK'}\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "import requests\n",
-    "\n",
-    "response = requests.get(\"http://0.0.0.0:8080/health\")\n",
-    "\n",
-    "if response.status_code == 200:\n",
-    "    data = response.json()\n",
-    "    print(data)\n",
-    "else:\n",
-    "    print(\"Error en la solicitud. Código de estado:\", response.status_code)\n"
+    "### Local Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'predicted_class': 0}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "import requests\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
-    "import io\n",
     "\n",
-    "# Abre tu imagen\n",
-    "image = Image.open(\"/Users/matiassorozabal/Documents/ORT-ml-en-produccion/practico_6/img/plane.jpeg\")\n",
-    "\n",
-    "# Redimensionamos la imagen a 32x32\n",
-    "image = image.resize((32, 32))\n",
-    "\n",
-    "# Convertimos la imagen a un array de numpy y expandimos las dimensiones\n",
-    "image_np = np.expand_dims(np.array(image), axis=0)\n",
-    "\n",
-    "# Convertimos la imagen de numpy a bytes\n",
-    "image_bytes = io.BytesIO()\n",
-    "image.save(image_bytes, format='JPEG')\n",
-    "\n",
-    "# Configura el URL de tu API. Reemplaza <dns-name-label> y <region> con los tuyos.\n",
-    "url = \"http://0.0.0.0:8080/predict\"\n",
-    "\n",
-    "# Configura los datos de la imagen para la solicitud\n",
-    "img_data = {\"image_file\": image_bytes.getvalue()}\n",
-    "\n",
-    "# Haz una solicitud POST a la API con la imagen\n",
-    "response = requests.post(url, files=img_data)\n",
-    "\n",
-    "# Imprime la respuesta\n",
-    "print(response.json())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'status': 'OK'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Azure GET\n",
-    "\n",
-    "import requests\n",
-    "\n",
-    "response = requests.get(\"http://52.188.171.27:8080/health\")\n",
+    "response = requests.get(\"http://0.0.0.0:8080/ping\")\n",
     "\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
@@ -99,8 +31,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -111,15 +45,13 @@
     }
    ],
    "source": [
-    "## Ahora le pegamos a Azure\n",
-    "\n",
     "import requests\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import io\n",
     "\n",
     "# Abre tu imagen\n",
-    "image = Image.open(\"/Users/matiassorozabal/Documents/ORT-ml-en-produccion/practico_6/img/plane.jpeg\")\n",
+    "image = Image.open(\"img/plane.jpeg\")\n",
     "\n",
     "# Redimensionamos la imagen a 32x32\n",
     "image = image.resize((32, 32))\n",
@@ -131,11 +63,11 @@
     "image_bytes = io.BytesIO()\n",
     "image.save(image_bytes, format='JPEG')\n",
     "\n",
-    "# Configura el URL de tu API. Reemplaza <dns-name-label> y <region> con los tuyos.\n",
-    "url = \"http://52.188.171.27:8080/predict\"\n",
     "\n",
     "# Configura los datos de la imagen para la solicitud\n",
     "img_data = {\"image_file\": image_bytes.getvalue()}\n",
+    "\n",
+    "url = \"http://0.0.0.0:8080/invocations\"\n",
     "\n",
     "# Haz una solicitud POST a la API con la imagen\n",
     "response = requests.post(url, files=img_data)\n",
@@ -150,13 +82,81 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### AWS Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"predicted_class\":0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import boto3\n",
+    "import base64\n",
+    "from PIL import Image\n",
+    "import io\n",
+    "\n",
+    "# Carga y procesa tu imagen\n",
+    "image = Image.open(\"img/plane.jpeg\")\n",
+    "\n",
+    "# Redimensiona la imagen si es necesario (esto es solo un ejemplo, asegúrate de que sea el tamaño correcto para tu modelo)\n",
+    "image = image.resize((32, 32))\n",
+    "\n",
+    "# Convierte la imagen a bytes\n",
+    "buffer = io.BytesIO()\n",
+    "image.save(buffer, format=\"JPEG\")\n",
+    "image_bytes = buffer.getvalue()\n",
+    "\n",
+    "# Codifica la imagen en base64\n",
+    "encoded_image = base64.b64encode(image_bytes).decode('utf-8')\n",
+    "\n",
+    "# Configura el cliente y el endpoint\n",
+    "client = boto3.client('sagemaker-runtime')\n",
+    "endpoint_name = \"model-keras-endpoint\"\n",
+    "\n",
+    "# Realiza la solicitud al endpoint\n",
+    "response = client.invoke_endpoint(\n",
+    "    EndpointName=endpoint_name,\n",
+    "    ContentType='application/x-image',\n",
+    "    Body=image_bytes\n",
+    ")\n",
+    "\n",
+    "# Decodifica la respuesta\n",
+    "result = response['Body'].read().decode('utf-8')\n",
+    "\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "conda_python3",
    "language": "python",
-   "name": "python3"
+   "name": "conda_python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,10 +168,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.12"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
